lib_LTLIBRARIES = libspider.la
libspider_la_SOURCES = 	\
	spider/parser/Expression.cpp 							\
	spider/scheduling/MemAlloc/DummyMemAlloc.cpp 			\
	spider/scheduling/MemAlloc/SpecialActorMemAlloc.cpp 	\
	spider/scheduling/Schedule.cpp 							\
	spider/scheduling/Scheduler/ListScheduler.cpp 			\
	spider/graphTransfo/GraphTransfo.cpp 					\
	spider/graphTransfo/AddVertices.cpp 					\
	spider/graphTransfo/Optims.cpp 							\
	spider/graphTransfo/topologyMatrix.cpp 					\
	spider/graphTransfo/LinkVertices.cpp 					\
	spider/graphTransfo/ComputeBRV.cpp 						\
	spider/graphs/PiSDF/PiSDFGraph.cpp 						\
	spider/graphs/PiSDF/PiSDFParam.cpp 						\
	spider/graphs/PiSDF/PiSDFVertex.cpp 					\
	spider/graphs/PiSDF/PiSDFEdge.cpp 						\
	spider/graphs/SRDAG/SRDAGVertex.cpp 					\
	spider/graphs/SRDAG/SRDAGGraph.cpp 						\
	spider/graphs/SRDAG/SRDAGEdge.cpp 						\
	spider/graphs/Bipartite/BipartiteGraph.cpp 				\
	spider/graphs/Archi/SharedMemArchi.cpp 				\
	spider/spider.cpp 				\
	spider/launcher/Launcher.cpp 				\
	common/platform.cpp 				\
	common/tools/StaticStack.cpp 				\
	common/tools/DynStack.cpp 				\
	lrt/lrt.cpp 				\
	lrt/specialActors/join.cpp 				\
	lrt/specialActors/end.cpp 				\
	lrt/specialActors/broadcast.cpp 				\
	lrt/specialActors/roundbuffer.cpp 				\
	lrt/specialActors/init.cpp 				\
	lrt/specialActors/fork.cpp 				\
	spider/monitor/StackMonitor.cpp \
	spider/monitor/TimeMonitor.cpp \
	platforms/platform_linux/LinuxLrtCommunicator.cpp  	\
	platforms/platform_linux/LinuxSpiderCommunicator.cpp  	\
	platforms/platform_linux/platformLinux.cpp		\
	spider/parser/Expression.h \
	spider/scheduling/MemAlloc.h \
	spider/scheduling/MemAlloc/DummyMemAlloc.h \
	spider/scheduling/MemAlloc/SpecialActorMemAlloc.h \
	spider/scheduling/Schedule.h \
	spider/scheduling/Scheduler.h \
	spider/scheduling/Scheduler/ListScheduler.h \
	spider/graphTransfo/ComputeBRV.h \
	spider/graphTransfo/topologyMatrix.h \
	spider/graphTransfo/GraphTransfo.h \
	spider/graphTransfo/LinkVertices.h \
	spider/graphTransfo/Optims.h \
	spider/graphTransfo/AddVertices.h \
	spider/graphs/PiSDF/PiSDFCommon.h \
	spider/graphs/PiSDF/PiSDFParam.h \
	spider/graphs/PiSDF/PiSDFGraph.h \
	spider/graphs/PiSDF/PiSDFEdge.h \
	spider/graphs/PiSDF/PiSDFVertex.h \
	spider/graphs/SRDAG/SRDAGGraph.h \
	spider/graphs/SRDAG/SRDAGCommon.h \
	spider/graphs/SRDAG/SRDAGVertex.h \
	spider/graphs/SRDAG/SRDAGEdge.h \
	spider/graphs/Bipartite/BipartiteGraph.h \
	spider/graphs/Archi/Archi.h \
	spider/graphs/Archi/SharedMemArchi.h \
	spider/launcher/Launcher.h \
	spider/spider.h \
	common/type.h \
	common/Message.h \
	common/tools/Set.h \
	common/tools/SetElement.h \
	common/tools/StaticStack.h \
	common/tools/DynStack.h \
	common/tools/Stack.h \
	common/tools/List.h \
	common/tools/Rational.h \
	common/tools/Pile.h \
	common/tools/Queue.h \
	common/SpiderCommunicator.h \
	common/LrtCommunicator.h \
	lrt/lrt.h \
	lrt/specialActors/specialActors.h \
	spider/monitor/TimeMonitor.h \
	spider/monitor/StackMonitor.h \
	platforms/platform_linux/LinuxLrtCommunicator.h    \
	platforms/platform_linux/LinuxSpiderCommunicator.h \
	spider/platformLinux.h \
	spider/platform.h


nobase_include_HEADERS = spider/spider.h

AM_CPPFLAGS = -I$(srcdir)/common -I$(srcdir)/spider -I$(srcdir)/lrt -I$(srcdir)/platforms/platform_linux
